# rosie

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  OPTIMIZATIONS.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: TODO.md  current-runtime-and-tui-spec.md  runtime-cli-config-spec.md  theme-schema.md  tui-keymap-spec.md  tui-migration-plan.md
man/: rosie.1
scripts/: check-command-docs.sh  check-quality.sh  release.sh
src/: cli.rs  config.rs  credentials.rs  install.rs  llm.rs  main.rs  paths.rs  provider.rs  theme.rs  tui.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs
src/tui/: tests.rs
themes/: rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml
