[package]
name = "rosie"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
env_logger = "0.10"

[package.metadata.release]
allow-branch = ["main"]
tag-prefix = "v"
tag-name = "{{prefix}}{{version}}"
tag-message = "Release {{tag_name}}"
pre-release-commit-message = "Release {{version}}"
push-remote = "origin"
