[package]
name = "rosie"
version = "0.7.0"
edition = "2024"

[dependencies]
anyhow = "1"
log = "0.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
env_logger = "0.10"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }

[package.metadata.release]
allow-branch = ["main"]
tag-prefix = "v"
tag-name = "{{prefix}}{{version}}"
tag-message = "Release {{tag_name}}"
pre-release-commit-message = "Release {{version}}"
push-remote = "origin"
